metadata/force-app/main/default/objects/CustomName_VuZIa__c/CustomName_VuZIa__c.object-meta.xml
<CustomObject>
    <description>Description_zqzML</description>
    <label>CustomLabel_XJOEo</label>
    <nameField>
        <label>CustomLabel_XJOEo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_XJOEos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>