metadata/force-app/main/default/objects/CustomName_VuZIa__c/fields/CustomField_EKHKx__c.field-meta.xml
<CustomField>
    <fullName>CustomField_EKHKx__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldbzVRX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>