metadata/force-app/main/default/objects/CustomName_VuZIa__c/fields/CustomField_OjNtQ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_OjNtQ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldlWQSi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>